tests/NormalTests/paczka1/small_fuzzy/68195468.err
Error in line 1: S450 A274 23,9
Error in line 3: S450 S450 25,4
